--- a/src/app/app.formulario/app.formulario.component.html
+++ b/src/app/app.formulario/app.formulario.component.html
@@ -1,16 +1,20 @@
   <form>
   <div class="form-group">
     <label>Valor do imóvel:</label>
-    <input type="input" class="form-control" id="valor-imovel">
+    <input type="number" class="form-control" id="valor-imovel" min="0" step="25000" autofocus>
   </div>
   <div class="form-group">
     <label>Disponibilidade</label>
-    <input type="input" class="form-control" id="disponibilidade">
+    <input type="number" class="form-control" id="disponibilidade" min="0" step="5000">
+  </div>
+  <div class="form-group">
+    <label>Prestações</label>
+    <input type="number" class="form-control" id="disponibilidade" min="0" max="480" value="180">
   </div>
   <div class="form-group">
     <label><input type="checkbox" value="true"> Possui FGTS</label>
   </div>
   <div class="form-group">
-    <button type="button" class="btn btn-primary">Calcular</button>
+    <button type="button" class="form-control btn btn-primary">Calcular</button>
   </div>
 </form>
