--- a/src/app/app.formulario/app.formulario.component.html
+++ b/src/app/app.formulario/app.formulario.component.html
@@ -1,20 +1,18 @@
-  <form>
-  <div class="form-group">
-    <label>Valor do imóvel:</label>
-    <input type="number" class="form-control" id="valor-imovel" min="0" step="25000" autofocus>
-  </div>
-  <div class="form-group">
-    <label>Disponibilidade</label>
-    <input type="number" class="form-control" id="disponibilidade" min="0" step="5000">
-  </div>
-  <div class="form-group">
-    <label>Prestações</label>
-    <input type="number" class="form-control" id="disponibilidade" min="0" max="480" value="180">
-  </div>
-  <div class="form-group">
-    <label><input type="checkbox" value="true"> Possui FGTS</label>
-  </div>
-  <div class="form-group">
-    <button type="button" class="form-control btn btn-primary">Calcular</button>
-  </div>
-</form>
+<div class="form-group">
+  <label>Valor do imóvel:</label>
+  <input [(ngModel)]="usuario.valorImovel" type="number" class="form-control" id="valor-imovel" min="0" step="25000" autofocus>
+</div>
+<div class="form-group">
+  <label>Disponibilidade</label>
+  <input [(ngModel)]="usuario.disponivel" type="number" class="form-control" id="disponibilidade" min="0" step="5000">
+</div>
+<div class="form-group">
+  <label>Prestações</label>
+  <input [(ngModel)]="usuario.prestacoes" type="number" class="form-control" id="disponibilidade" min="0" max="480" value="180">
+</div>
+<div class="form-group">
+  <label><input [(ngModel)]="usuario.usaFGTS" type="checkbox" value="true"> Possui FGTS</label>
+</div>
+<div class="form-group">
+  <button type="button" (click)="calcular()" class="form-control btn btn-primary">Calcular</button>
+</div>
