--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,1 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <app-menu-superior></app-menu-superior>
-  </div>
-</nav>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-lg-2">
-      <formulario></formulario>
-    </div>
-    <div></div>
-  </div>
-</div>
+<app-main></app-main>
