--- a/src/app/menu-superior/menu-superior.component.html
+++ b/src/app/menu-superior/menu-superior.component.html
@@ -1,8 +1,8 @@
 <div class="navbar-header">
-  <a class="navbar-brand" href="#">Nome</a>
+  <a class="navbar-brand" href="#">{{title}}</a>
 </div>
 <ul class="nav navbar-nav">
-  <li><a href="#">Aluguel</a></li>
-  <li><a href="#">Financiamento</a></li>
-  <li><a href="#">Consórcio</a></li>
+  <li><a href="#">{{aluguel}}</a></li>
+  <li><a href="#">{{financiamento}}</a></li>
+  <li><a href="#">{{consorcio}}</a></li>
 </ul>
