--- a/src/app/tabela-vpl/tabela-vpl.component.html
+++ b/src/app/tabela-vpl/tabela-vpl.component.html
@@ -15,14 +15,14 @@
   <tbody>
     <tr *ngFor="let p of financiamento.prestacoes; let i=index">
       <td>{{i}}</td>
-      <td>{{p.saldoDevedor1 | currency }}</td>
-      <td>{{p.correcaoTR | currency}}</td>
-      <td>{{p.saldoDevedor2 | currency}}</td>
-      <td>{{p.amortizacao | currency}}</td>
-      <td>{{p.juros | currency}}</td>
-      <td>{{p.seguros | currency}}</td>
-      <td>{{p.parcela | currency}}</td>
-      <td>{{p.parcelaVP | currency}}</td>
+      <td>{{p.saldoDevedor1 | currency:'USD':true }}</td>
+      <td>{{p.correcaoTR | currency:'USD':true}}</td>
+      <td>{{p.saldoDevedor2 | currency:'USD':true}}</td>
+      <td>{{p.amortizacao | currency:'USD':true}}</td>
+      <td>{{p.juros | currency:'USD':true}}</td>
+      <td>{{p.seguros | currency:'USD':true}}</td>
+      <td>{{p.parcela | currency:'USD':true}}</td>
+      <td>{{p.parcelaVP | currency:'USD':true}}</td>
     </tr>
   </tbody>
 </table>
