Configurando a tabela para aparecer somente se o formulario tiver sido clicado

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -9,7 +9,7 @@
       <app-formulario (onCalcular)="onCalcular($event)"></app-formulario>
     </div>
     <div class="col-lg-10">
-      <app-tabela-vpl [financiamento]="financiamento"></app-tabela-vpl>
+      <app-tabela-vpl [financiamento]="financiamento" [exibirTabela]="exibir"></app-tabela-vpl>
     </div>
   </div>
 </div>
