--- a/src/app/tabela-vpl/tabela-vpl.component.html
+++ b/src/app/tabela-vpl/tabela-vpl.component.html
@@ -1,24 +1,26 @@
-<table class="table table-bordered table-striped table-condensed">
-  <thead>
-    <tr>
-      <th>N</th>
-      <th>Saldo Devedor</th>
-      <th>Correção TR</th>
-      <th>Amortização</th>
-      <th>Juros</th>
-      <th>Seguros</th>
-      <th>Parcela</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let p of financiamento.prestacoes; let i=index">
-      <td>{{i}}</td>
-      <td>{{p.saldoDevedor1 | number:'1.2-2' }}</td> 
-      <td>{{p.correcaoTR | number:'1.2-2' }}</td>
-      <td>{{p.amortizacao | number:'1.2-2' }}</td>
-      <td>{{p.juros | number:'1.2-2' }}</td>
-      <td>{{p.seguros | number:'1.2-2' }}</td>
-      <td>{{p.parcela | number:'1.2-2' }}</td>
-    </tr>
-  </tbody>
-</table>
+<div *ngIf="exibirTabela">
+  <table class="table table-bordered table-striped table-condensed">
+    <thead>
+      <tr>
+        <th>N</th>
+        <th>Saldo Devedor (R$)</th>
+        <th>Correção TR (R$)</th>
+        <th>Amortização (R$)</th>
+        <th>Juros (R$)</th>
+        <th>Seguros (R$)</th>
+        <th>Parcela (R$)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let p of financiamento.prestacoes; let i=index">
+        <td>{{i}}</td>
+        <td>{{p.saldoDevedor1 | number:'1.2-2' }}</td> 
+        <td>{{p.correcaoTR | number:'1.2-2' }}</td>
+        <td>{{p.amortizacao | number:'1.2-2' }}</td>
+        <td>{{p.juros | number:'1.2-2' }}</td>
+        <td>{{p.seguros | number:'1.2-2' }}</td>
+        <td>{{p.parcela | number:'1.2-2' }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
