--- a/src/app/app.formulario/app.formulario.component.html
+++ b/src/app/app.formulario/app.formulario.component.html
@@ -8,7 +8,7 @@
 </div>
 <div class="form-group">
   <label>Prestações</label>
-  <input [(ngModel)]="usuario.prestacoes" type="number" class="form-control" id="disponibilidade" min="0" max="480" value="180">
+  <input [(ngModel)]="usuario.prestacoes" type="number" class="form-control" id="disponibilidade" min="0" max="480">
 </div>
 <div class="form-group">
   <label><input [(ngModel)]="usuario.usaFGTS" type="checkbox" value="true"> Possui FGTS</label>
