--- a/src/app/tabela-vpl/tabela-vpl.component.html
+++ b/src/app/tabela-vpl/tabela-vpl.component.html
@@ -3,12 +3,12 @@
     <thead>
       <tr>
         <th>N</th>
-        <th>Saldo Devedor (R$)</th>
-        <th>Correção TR (R$)</th>
-        <th>Amortização (R$)</th>
-        <th>Juros (R$)</th>
-        <th>Seguros (R$)</th>
-        <th>Parcela (R$)</th>
+        <th>Saldo Devedor</th>
+        <th>Correção TR</th>
+        <th>Amortização</th>
+        <th>Juros</th>
+        <th>Seguros</th>
+        <th>Parcela</th>
       </tr>
     </thead>
     <tbody>
