--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -8,7 +8,15 @@
 </div>
 <div class="form-group">
   <label>Prestações</label>
-  <input [(ngModel)]="usuario.prestacoes" type="number" class="form-control" id="disponibilidade" min="0" max="480">
+  <input [(ngModel)]="usuario.prestacoes" type="number" class="form-control" id="prestacoes" min="0" max="480">
+</div>
+<div class="form-group">
+  <label>Renda Mensal</label>
+  <input [(ngModel)]="usuario.renda" type="number" class="form-control" id="renda" min="0" step="100">
+</div>
+<div class="form-group">
+  <label>Data de Nascimento</label>
+  <input [(ngModel)]="usuario.nascimento" type="date" class="form-control" id="nascimento">
 </div>
 <div class="form-group">
   <label><input [(ngModel)]="usuario.usaFGTS" type="checkbox" value="true"> Possui FGTS</label>
