melhorando a lógica de negócio do financiamento e calculando o patrimônio a valor presente

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -12,7 +12,8 @@
       <app-resultado [financiamento]="financiamento" [exibirTabela]="exibir"></app-resultado>
     </div>
     <div class="col-lg-6">
-      <app-tabela-vpl [financiamento]="financiamento" [exibirTabela]="exibir"></app-tabela-vpl>      
+      <app-tabela-vpl [financiamento]="financiamento" [exibirTabela]="exibir"></app-tabela-vpl>
+      <!--<app-grafico-financiamento [exibirTabela]="exibir"></app-grafico-financiamento>-->
     </div>
   </div>
 </div>
