--- a/src/app/tabela-vpl/tabela-vpl.component.html
+++ b/src/app/tabela-vpl/tabela-vpl.component.html
@@ -1,36 +1,25 @@
-<div *ngIf="exibirTabela">
+<div class="table table-responsive" *ngIf="exibirTabela">  
   <table class="table table-bordered table-striped table-condensed">
     <thead>
       <tr>
         <th>N</th>
+        <th>Parcela</th>   
         <th>Saldo Devedor</th>
         <th>Correção TR</th>
         <th>Amortização</th>
         <th>Juros</th>
-        <th>Seguros</th>
-        <th>Parcela</th>
-        <th>VP Parcela</th>
-        <!--<th>Valor Imóvel</th>
-        <th>Patrimônio</th>
-        <th>Var. Patrimônio</th>
-        <th>VP Variação</th>-->
-        
+        <th>Seguros</th>     
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let p of financiamento.prestacoes; let i=index">
         <td>{{i}}</td>
+        <td>{{p.parcela | number:'1.2-2' }}</td>
         <td>{{p.saldoDevedor1 | number:'1.2-2' }}</td> 
         <td>{{p.correcaoTR | number:'1.2-2' }}</td>
         <td>{{p.amortizacao | number:'1.2-2' }}</td>
         <td>{{p.juros | number:'1.2-2' }}</td>
         <td>{{p.seguros | number:'1.2-2' }}</td>
-        <td>{{p.parcela | number:'1.2-2' }}</td>
-        <td>{{p.parcelaVP | number:'1.2-2' }}</td>
-        <!--<td>{{p.valorImovel | number:'1.2-2' }}</td>
-        <td>{{p.patrimonio | number:'1.2-2' }}</td>
-        <td>{{p.varPatrimonio | number:'1.2-2' }}</td>
-        <td>{{p.vpVariacao | number:'1.2-2' }}</td>-->
       </tr>
     </tbody>
   </table>
