--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -25,7 +25,7 @@
 </div>
 <div class="form-group">
   <label>Data de Nascimento</label>
-  <input [(ngModel)]="usuario.nascimento" type="date" class="form-control" id="nascimento">
+  <input [(ngModel)]="nascimento" type="date" class="form-control" id="nascimento">
 </div>
 <div class="form-group">
   <label><input [(ngModel)]="usuario.usaFGTS" type="checkbox" value="true"> Possui FGTS</label>
