--- a/src/app/tabela-vpl/tabela-vpl.component.html
+++ b/src/app/tabela-vpl/tabela-vpl.component.html
@@ -5,7 +5,9 @@
         <th>N</th>
         <th>Saldo Devedor</th>
         <th>Correção TR</th>
+        <th>Saldo Devedor2</th>
         <th>Amortização</th>
+        <th>FGTS</th>
         <th>Juros</th>
         <th>Seguros</th>
         <th>Parcela</th>
@@ -21,7 +23,9 @@
         <td>{{i}}</td>
         <td>{{p.saldoDevedor1 | number:'1.2-2' }}</td> 
         <td>{{p.correcaoTR | number:'1.2-2' }}</td>
+        <td>{{p.saldoDevedor2 | number:'1.2-2' }}</td>
         <td>{{p.amortizacao | number:'1.2-2' }}</td>
+        <td>{{p.fgts | number:'1.2-2' }}</td>
         <td>{{p.juros | number:'1.2-2' }}</td>
         <td>{{p.seguros | number:'1.2-2' }}</td>
         <td>{{p.parcela | number:'1.2-2' }}</td>
