--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -8,10 +8,12 @@
     <div class="col-lg-2">
       <app-formulario (onCalcular)="onCalcular($event)"></app-formulario>
     </div>
-    <div class="col-lg-4">
-      <app-resultado [financiamento]="financiamento" [exibirTabela]="exibir"></app-resultado>
+    <div class="col-lg-2">
+      <!--<app-resultado [financiamento]="financiamento" [exibirTabela]="exibir"></app-resultado>-->
+      <app-financiamento-propriedades [exibirConfig]="exibir" [usuario]="usuario" [config]="financiamentoConfig" [teste]="fgtsConfig">        
+      </app-financiamento-propriedades>
     </div>
-    <div class="col-lg-6">
+    <div class="col-lg-8">
       <app-tabela-vpl [financiamento]="financiamento" [exibirTabela]="exibir"></app-tabela-vpl>
       <!--<app-grafico-financiamento [exibirTabela]="exibir"></app-grafico-financiamento>-->
     </div>
