--- a/src/app/resultado/resultado.component.html
+++ b/src/app/resultado/resultado.component.html
@@ -1,20 +1,20 @@
 <div *ngIf="exibirTabela">
     <div class="panel panel-default">
-    <div class="panel-heading">Financiamento com prazo de {{financiamento.usuario.prestacoes }} meses</div>
+    <div class="panel-heading">Financiamento com prazo de {{financiamento.Usuario.prestacoes }} meses</div>
     <div class="panel-body">
         <table class="table table-condensed">
             <tbody>
                 <tr>
                     <td>Primeira Parcela</td>
-                    <td>{{financiamento.primeiraParcela | number:'1.2-2'}}</td>
+                    <td>{{financiamento.Resultado.PrimeiraParcela | number:'1.2-2'}}</td>
                 </tr>
                 <tr>
                     <td>Comprometimento</td>
-                    <td>{{ financiamento.comprometimento | percent }}</td>
+                    <td>{{ financiamento.Resultado.Comprometimento }}</td>
                 </tr>
                 <tr>
                     <td>Última Parcela</td>
-                    <td>{{financiamento.ultimaParcela | number:'1.2-2'}}</td>
+                    <td>{{financiamento.Resultado.UltimaParcela | number:'1.2-2'}}</td>
                 </tr>
             </tbody>    
         </table>
@@ -29,23 +29,23 @@
                 <tbody>
                 <tr class="success">
                     <td>Patrimônio</td>
-                    <td class="text-right">{{ financiamento.patrimonioVPTotal | number:'1.2-2' }}</td>
-                    <td class="text-right">{{ financiamento.patrimonioTotal | number:'1.2-2' }}</td>
+                    <td class="text-right">{{ financiamento.Resultado.PatrimonioVPTotal | number:'1.2-2' }}</td>
+                    <td class="text-right">{{ financiamento.Resultado.PatrimonioTotal | number:'1.2-2' }}</td>
                 </tr>
                 <tr class="warning">
                     <td>Entrada</td>
-                    <td class="text-right">{{ financiamento.usuario.disponivel | number:'1.2-2' }}</td>
-                    <td class="text-right">{{ financiamento.usuario.disponivel | number:'1.2-2' }}</td>
+                    <td class="text-right">{{ financiamento.Usuario.disponivel | number:'1.2-2' }}</td>
+                    <td class="text-right">{{ financiamento.Usuario.disponivel | number:'1.2-2' }}</td>
                 </tr>
                 <tr class="warning">
                     <td>Total de Parcelas</td>
-                    <td class="text-right">{{financiamento.parcelaVPTotal | number:'1.2-2'}}</td>
-                    <td class="text-right">{{financiamento.parcelaTotal | number:'1.2-2'}}</td>
+                    <td class="text-right">{{financiamento.Resultado.ParcelaVPTotal | number:'1.2-2'}}</td>
+                    <td class="text-right">{{financiamento.Resultado.ParcelaTotal | number:'1.2-2'}}</td>
                 </tr>
                 <tr>
                     <td class="text-center"><strong>Valor Líquido</strong></td>
-                    <td class="text-right"><strong>{{ financiamento.vlPresente | number:'1.2-2' }}</strong></td>
-                    <td class="text-right"><strong>{{ financiamento.vlNominal | number:'1.2-2' }}</strong></td>
+                    <td class="text-right"><strong>{{ financiamento.Resultado.ValorLiquidoPresente | number:'1.2-2' }}</strong></td>
+                    <td class="text-right"><strong>{{ financiamento.Resultado.ValorLiquidoNominal | number:'1.2-2' }}</strong></td>
                 </tr>
             </tbody>    
         </table>
