--- a/src/app/tabela-vpl/tabela-vpl.component.html
+++ b/src/app/tabela-vpl/tabela-vpl.component.html
@@ -7,7 +7,7 @@
         <th>Correção TR</th>
         <th>Saldo Devedor2</th>
         <th>Amortização</th>
-        <th>FGTS</th>
+        <th *ngIf="financiamento.Usuario.usaFGTS">FGTS</th>
         <th>Juros</th>
         <th>Seguros</th>
         <th>Parcela</th>
@@ -19,13 +19,13 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let p of financiamento.prestacoes; let i=index">
+      <tr *ngFor="let p of financiamento.Prestacoes; let i=index">
         <td>{{i}}</td>
         <td>{{p.saldoDevedor1 | number:'1.2-2' }}</td> 
         <td>{{p.correcaoTR | number:'1.2-2' }}</td>
         <td>{{p.saldoDevedor2 | number:'1.2-2' }}</td>
         <td>{{p.amortizacao | number:'1.2-2' }}</td>
-        <td>{{p.fgts | number:'1.2-2' }}</td>
+        <td *ngIf="financiamento.Usuario.usaFGTS">{{p.fgts | number:'1.2-2' }}</td>
         <td>{{p.juros | number:'1.2-2' }}</td>
         <td>{{p.seguros | number:'1.2-2' }}</td>
         <td>{{p.parcela | number:'1.2-2' }}</td>
