--- a/src/app/financiamento-propriedades/financiamento-propriedades.component.html
+++ b/src/app/financiamento-propriedades/financiamento-propriedades.component.html
@@ -1,40 +1,42 @@
-<div *ngIf="exibirConfig">
-  <div class="form-group">  
-    <label>Taxa Admnistrativa:</label>
-      <input [(ngModel)]="config.TaxaAdministrativa" type="number" class="form-control">
-  </div>
-  <div class="form-group">
-    <label>Juros Mensais</label>
-      <input [(ngModel)]="config.JurosMensais" type="number" class="form-control">
-  </div>
-  <div class="form-group">
-    <label>TR Mensal</label>
-    <input [(ngModel)]="config.TRMensal" type="number" class="form-control">
-  </div>
-  <div class="form-group">
-    <label>Rentabilidade</label>
-      <input [(ngModel)]="config.Rentabilidade" type="number" class="form-control">
-  </div>
-  <div class="form-group">
-    <label>Seguros</label>
-    <select class="form-control" (change)="selecionaSeguro($event)">
-      <option value="sa" selected>Sul América</option>
-      <option value="hdi">HDI</option>
-    </select>
-  </div>
-  <div class="form-group">
-      <label><input [(ngModel)]="teste.Entrada" type="checkbox" value="true"> Abater da entrada</label>
-  </div>
-  <div class="form-group">
-    <label>FGTS acumulado</label>
-      <input [(ngModel)]="usuario.FGTS" type="number" class="form-control" id="fgts" min="0" step="1000">
-  </div>
-  <div class="form-group">
-    <label>Novos Créditos de FGTS</label>
-      <select [(ngModel)]="teste.Posterior" class="form-control">
-        <option>Abater das próximas parcela</option>
-        <option>Abater do saldo devedor</option>
-        <option>Não usar mais</option>
-      </select>
+<div class="panel panel-default" *ngIf="exibirConfig">
+  <div class="panel-heading">Propriedades</div>
+  <div class="panel-body">
+      <div class="form-group">  
+        <label>Taxa Admnistrativa:</label>
+          <input [(ngModel)]="config.TaxaAdministrativa" type="number" class="form-control">
+      </div>
+      <div class="form-group">
+        <label>Juros Mensais</label>
+          <input [(ngModel)]="config.JurosMensais" type="number" class="form-control">
+      </div>
+      <div class="form-group">
+        <label>TR Mensal</label>
+        <input [(ngModel)]="config.TRMensal" type="number" class="form-control">
+      </div>
+      <div class="form-group">
+        <label>Rentabilidade</label>
+          <input [(ngModel)]="config.Rentabilidade" type="number" class="form-control">
+      </div>
+      <div class="form-group">
+        <label>Seguros</label>
+        <select class="form-control" (change)="selecionaSeguro($event)">
+          <option value="sa" selected>Sul América</option>
+          <option value="hdi">HDI</option>
+        </select>
+      </div>
+      <div *ngIf="usuario.usaFGTS">
+        <div class="form-group">
+          <label><input [(ngModel)]="teste.Entrada" type="checkbox" value="true"> Abater da entrada</label>
+        </div>
+        <div class="form-group">
+          <label>Novos Créditos de FGTS</label>
+            <select [(ngModel)]="teste.Posterior" class="form-control">
+              <option value="2">Abater das próximas parcela</option>
+              <option value="1">Abater do saldo devedor</option>
+              <option value="0">Não usar mais</option>
+            </select>
+        </div>
+      </div>
   </div>
 </div>
+
