--- a/src/app/financiamento-propriedades/financiamento-propriedades.component.html
+++ b/src/app/financiamento-propriedades/financiamento-propriedades.component.html
@@ -1,25 +1,29 @@
 <div class="panel panel-default" *ngIf="exibirConfig">
   <div class="panel-heading">Propriedades</div>
-  <div class="panel-body">
-      <div class="form-group">  
-        <label>Taxa Admnistrativa:</label>
-          <input [(ngModel)]="config.TaxaAdministrativa" type="number" class="form-control">
+  <div class="panel-body">      
+      <div class="row">
+        <div class="form-group col-lg-6">  
+          <label>Taxa Admnistrativa:</label>
+            <input [(ngModel)]="config.TaxaAdministrativa" type="number" class="form-control input-sm">
+        </div>
+        <div class="form-group col-lg-6">
+          <label>Juros Mensais</label>
+            <input [(ngModel)]="config.JurosMensais" type="number" class="form-control input-sm">
+        </div>
       </div>
-      <div class="form-group">
-        <label>Juros Mensais</label>
-          <input [(ngModel)]="config.JurosMensais" type="number" class="form-control">
-      </div>
-      <div class="form-group">
-        <label>TR Mensal</label>
-        <input [(ngModel)]="config.TRMensal" type="number" class="form-control">
-      </div>
-      <div class="form-group">
-        <label>Rentabilidade</label>
-          <input [(ngModel)]="config.Rentabilidade" type="number" class="form-control">
+      <div class="row">
+        <div class="form-group col-lg-6">
+          <label>TR Mensal</label>
+          <input [(ngModel)]="config.TRMensal" type="number" class="form-control input-sm">
+        </div>
+        <div class="form-group col-lg-6">
+          <label>Rentabilidade</label>
+            <input [(ngModel)]="config.Rentabilidade" type="number" class="form-control input-sm">
+        </div>
       </div>
       <div class="form-group">
         <label>Seguros</label>
-        <select class="form-control" (change)="selecionaSeguro($event)">
+        <select class="form-control input-sm" (change)="selecionaSeguro($event)">
           <option value="sa" selected>Sul América</option>
           <option value="hdi">HDI</option>
         </select>
@@ -30,7 +34,7 @@
         </div>
         <div class="form-group">
           <label>Novos Créditos de FGTS</label>
-            <select [(ngModel)]="teste.Posterior" class="form-control">
+            <select [(ngModel)]="teste.Posterior" class="form-control input-sm">
               <option value="2">Abater das próximas parcela</option>
               <option value="1">Abater do saldo devedor</option>
               <option value="0">Não usar mais</option>
