--- a/src/app/tabela-vpl/tabela-vpl.component.html
+++ b/src/app/tabela-vpl/tabela-vpl.component.html
@@ -1,40 +1,46 @@
-<div class="table table-responsive" *ngIf="exibirTabela">  
-  <table class="table table-bordered table-striped table-condensed">
-    <thead>
-      <tr>
-        <th>N</th>
-        <th>Saldo Devedor</th>
-        <th>Correção TR</th>
-        <th>Saldo Devedor2</th>
-        <th>Amortização</th>
-        <th *ngIf="financiamento.Usuario.usaFGTS">FGTS</th>
-        <th>Juros</th>
-        <th>Seguros</th>
-        <th>Parcela</th>
-        <th>ParcelaVP</th>
-        <th>Valor Imovel</th>
-        <th>Patrimônio</th>
-        <th>varPatrimônio</th>
-        <th>vpVariacao</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let p of financiamento.Prestacoes; let i=index">
-        <td>{{i}}</td>
-        <td>{{p.saldoDevedor1 | number:'1.2-2' }}</td> 
-        <td>{{p.correcaoTR | number:'1.2-2' }}</td>
-        <td>{{p.saldoDevedor2 | number:'1.2-2' }}</td>
-        <td>{{p.amortizacao | number:'1.2-2' }}</td>
-        <td *ngIf="financiamento.Usuario.usaFGTS">{{p.fgts | number:'1.2-2' }}</td>
-        <td>{{p.juros | number:'1.2-2' }}</td>
-        <td>{{p.seguros | number:'1.2-2' }}</td>
-        <td>{{p.parcela | number:'1.2-2' }}</td>
-        <td>{{p.parcelaVP | number:'1.2-2' }}</td>
-        <td>{{p.valorImovel | number:'1.2-2' }}</td>
-        <td>{{p.patrimonio | number:'1.2-2' }}</td>
-        <td>{{p.varPatrimonio | number:'1.2-2' }}</td>
-        <td>{{p.vpVariacao | number:'1.2-2' }}</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="panel panel-default" *ngIf="exibirTabela">
+  <div class="panel-heading">Fluxo de caixa do financiamento</div>
+  <div class="panel-body">      
+    <div class="table table-responsive">  
+      <table class="table  table-striped table-condensed">
+        <thead>
+          <tr>
+            <th class="col-1">N</th>
+            <th class="text-right">Saldo Devedor</th>
+            <th class="text-right">Correção TR</th>
+            <!--<th>Saldo Devedor2</th>-->
+            <th class="text-right">Amortização</th>
+            <th class="text-right" *ngIf="financiamento.Usuario.usaFGTS">FGTS</th>
+            <th class="text-right">Juros</th>
+            <th class="text-right">Seguros</th>
+            <th class="text-right">Parcela</th>
+            <!--<th>ParcelaVP</th>
+            <th>Valor Imovel</th>
+            <th>Patrimônio</th>
+            <th>varPatrimônio</th>
+            <th>vpVariacao</th>-->
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let p of financiamento.Prestacoes; let i=index">
+            <td>{{i}}</td>
+            <td class="text-right">{{p.saldoDevedor1 | number:'1.2-2' }}</td> 
+            <td class="text-right">{{p.correcaoTR | number:'1.2-2' }}</td>
+            <!--<td>{{p.saldoDevedor2 | number:'1.2-2' }}</td>-->
+            <td class="text-right">{{p.amortizacao | number:'1.2-2' }}</td>
+            <td class="text-right" *ngIf="financiamento.Usuario.usaFGTS">{{p.fgts | number:'1.2-2' }}</td>
+            <td class="text-right">{{p.juros | number:'1.2-2' }}</td>
+            <td class="text-right">{{p.seguros | number:'1.2-2' }}</td>
+            <td class="text-right">{{p.parcela | number:'1.2-2' }}</td>
+            <!--<td>{{p.parcelaVP | number:'1.2-2' }}</td>
+            <td>{{p.valorImovel | number:'1.2-2' }}</td>
+            <td>{{p.patrimonio | number:'1.2-2' }}</td>
+            <td>{{p.varPatrimonio | number:'1.2-2' }}</td>
+            <td>{{p.vpVariacao | number:'1.2-2' }}</td>-->
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
+
