--- a/src/app/grafico-financiamento/grafico-financiamento.component.html
+++ b/src/app/grafico-financiamento/grafico-financiamento.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-default" *ngIf="exibirTabela">
     <div class="panel-heading">Evolução do patrimônio</div>
     <div class="panel-body">
         <div class="row">
