Fluxo de visualizacao de telas no financiamento

--- a/src/app/financiamento-propriedades/financiamento-propriedades.component.html
+++ b/src/app/financiamento-propriedades/financiamento-propriedades.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" *ngIf="exibirConfig">
+<div class="panel panel-default">
   <div class="panel-heading">Propriedades</div>
   <div class="panel-body">      
       <div class="row">
