--- a/src/app/resultado/resultado.component.html
+++ b/src/app/resultado/resultado.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="exibirTabela">
+<div>
     <div class="panel panel-default">
     <div class="panel-heading">Financiamento com prazo de {{financiamento.Usuario.prestacoes }} meses</div>
     <div class="panel-body">
