--- a/src/app/grafico-financiamento-2/grafico-financiamento-2.component.html
+++ b/src/app/grafico-financiamento-2/grafico-financiamento-2.component.html
@@ -1,7 +1,11 @@
-<div class="imgwrapper">
-    <figure class="figure">
-    <!--<img src="..."  alt="A generic square placeholder image with rounded corners in a figure.">-->
-    <div id="oi" style="width:600;height:400px;" class="figure-img img-fluid rounded"></div>
-    </figure>
+<div class="panel panel-default">
+    <div class="panel-heading">Evolução do Patrimônio</div>
+    <div class="panel-body">
+        <div class="imgwrapper">
+            <figure class="figure">
+            <div id="oi" style="width:600;height:400px;" class="figure-img img-fluid rounded"></div>
+            </figure>
+        </div>
+    </div>
 </div>
     
